[gd_scene load_steps=4 format=3 uid="uid://bwa5h8sx3w66e"]

[ext_resource type="Script" uid="uid://uv2iut4rg5jx" path="res://scenes/recipient.gd" id="1_fe5em"]
[ext_resource type="Texture2D" uid="uid://dkfmhnwcjadx7" path="res://assets/sprites/packages/box.png" id="2_fe5em"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fe5em"]
size = Vector2(155, 169)

[node name="Recipient" type="Area2D"]
script = ExtResource("1_fe5em")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -12.5)
shape = SubResource("RectangleShape2D_fe5em")

[node name="WantedSprite" type="Sprite2D" parent="."]
position = Vector2(1, -183)
texture = ExtResource("2_fe5em")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
